manifests/deployment.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: "akzdemo"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: "akzdemo"
    spec:
      containers:
        - name: "akzdemo"
          image: "tommyjakobsenaks.azurecr.io/akzdemo"
          ports:
          - containerPort: 80
