manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "akzdemo"
    labels:
        app: "akzdemo"
spec:
    type: LoadBalancer
    ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    selector:
        app: "akzdemo"
